[package]
name = "unkindness"
version = "0.18.1"
edition = "2024"

[workspace]
members = ["procedural_macros"]

[dependencies]
procedural_macros = { path = "procedural_macros" }
bevy = { version = "0.18.1", default-features = false }
duck_back = { version = "1.4.0", optional = true }

[features]
error_handling = ["dep:duck_back"]
# Bevy features:
default = []
